# RAG_Pipeline

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: .env.example  main.py  mistral.py
backend/app/ingestion/: chunk.py  pdf_extract.py
backend/app/retrieval/: rerank.py
backend/app/storage/: custom_vector_db.py
backend/app/tests/: test_rag_pipeline.py  test_upload.py
backend/app/tools/: answer_shaping.py  hallucination_check.py  query_refusal.py  query_router.py  query_transformation.py  retrieval_need.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
